--- a/main.html
+++ b/main.html
@@ -10,14 +10,24 @@
 </head>
 <body>
 	<div class="main">
+
+		<div class="instruct">
+			<p>Look! It's Ryu! Click on Ryu to see him throw a Hadouken.</p>
+			<p> Hold down X to make him look "cool."</p>
+		</div>
+
 		<div class="ryu">
 			<div class="ryu-still"></div>
 			<div class="ryu-ready"></div>
 			<div class="ryu-throwing"></div>
+			<div class="ryu-cool"></div>
 		</div>
 		<div class="hadouken">
 		</div>
 		<audio id="hadouken-sound" src="sound/hadouken.mp3">
+		
 	</div>
+	
+
 </body>
 </html>
